--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   "dependencies": {
     "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.0.1"
+    "@oclif/plugin-plugins": "^2.0.1",
+    "crypt": "^0.0.2"
   },
   "devDependencies": {
     "@oclif/test": "^2",
     "@types/chai": "^4",
+    "@types/crypto-js": "^4.1.1",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.9.4",
+    "@types/node": "^16.11.40",
     "chai": "^4",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4",
